--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@capacitor/core": "^7.4.4",
     "@capacitor/filesystem": "^7.1.4",
     "@capacitor/ios": "^7.4.4",
+    "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@google/generative-ai": "^0.24.1",
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.24",
